--- a/Python_problem/scriptToJson.ipynb
+++ b/Python_problem/scriptToJson.ipynb
@@ -32,10 +32,10 @@
    "outputs": [],
    "source": [
     "def twitter_setup():\n",
-    "    consumer_key = '54oJ9jI6ANEVauokqxDZFjHyh'\n",
-    "    consumer_secret = 'APSbbQmiqT521UjSvFSIgZzWO7zosbIxsKDR6yDxa8uh5L7dds'\n",
-    "    access_token = '1114440557617602560-0DtZbzSmhPGtU3vNk7ASGjh4Jw9TLu'\n",
-    "    access_secret = 'fFqcqgzkttvFQ0kwYKF5V2cLZSDtHUtofmTAWKe4dPs10'\n",
+    "    consumer_key = ''\n",
+    "    consumer_secret = ''\n",
+    "    access_token = ''\n",
+    "    access_secret = ''\n",
     "\n",
     "    auth = OAuthHandler(consumer_key, consumer_secret)\n",
     "    auth.set_access_token(access_token, access_secret)\n",
